<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login" android:background="@color/colorBackground">

    <TextView
            android:text="@string/login"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:id="@+id/textView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/login_hint_name"
            android:ems="10"
            android:id="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_hint_pass"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editText3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <Button
            android:text="@string/btn_iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="iniciarSesion"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"/>
    <Button
            android:text="@string/btn_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:onClick="regitrarse"
            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/button"/>
    <Button
            android:text="@string/btn_olvide"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/button"/>
</android.support.constraint.ConstraintLayout>