<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".Menu">

    <Button
            android:text="@string/btn_buscar"
            android:onClick="buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button7" android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/btn_realiar"
            android:onClick="comprar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button7" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btn_agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button8"/>
    <Button
            android:text="@string/btn_reportar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/button10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button9"/>
    <Button
            android:text="@string/btn_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button11" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button10" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/ratingBar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/btn_recomiendanos"
            android:background="@color/colorRecomendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button12" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"/>
</android.support.constraint.ConstraintLayout>