<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Transaccion">

    <FrameLayout
            android:layout_width="318dp"
            android:layout_height="241dp" android:layout_marginTop="40dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/frameLayout"
            android:background="@color/colorTransaccion">

    </FrameLayout>
    <TextView
            android:text="@string/transaccion_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:id="@+id/textView14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/frameLayout" app:layout_constraintStart_toStartOf="@+id/frameLayout"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/transaccion_producto"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="@+id/frameLayout" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/transaccion_descuento"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/frameLayout" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/transaccion_total"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/frameLayout" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/transaccion_saldo_post"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/frameLayout" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btn_confirmar"
            android:onClick="confirmar"
            android:layout_width="wrap_content"
            android:background="@color/colorConfirmar"
            android:layout_height="wrap_content"
            android:id="@+id/button13"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"/>
    <RatingBar
            android:layout_width="192dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/ratingBar2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button13"/>
    <Button
            android:text="@string/btn_recomendar"
            android:background="@color/colorRecomendar"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:id="@+id/button14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.424"/>
</android.support.constraint.ConstraintLayout>