<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="match_parent"
        tools:context=".Singup">

    <TextView
            android:text="@string/sing_nombre"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/sing_apellido"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView3" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/sing_rut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView4" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/sing_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView7" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/sing_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="30dp"/>
    <TextView
            android:text="@string/sing_pass"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView10" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <TextView
            android:text="@string/sing_conf_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView9" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <EditText

            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText7" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText9"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText8"/>
    <Button
            android:text="@string/btn_confirmar"
            android:layout_width="wrap_content"
            android:onClick="registrarse"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText9"/>
    <Button
            android:text="@string/btn_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btn_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button4"/>
</android.support.constraint.ConstraintLayout>